@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-07-25T01:02:04Z",
-  "count_outdated" : 460,
-  "uniques_outdated" : 112,
-  "count" : 461,
-  "uniques" : 113,
+  "timestamp" : "2024-09-05T01:06:14Z",
+  "count_outdated" : 461,
+  "uniques_outdated" : 113,
+  "count" : 463,
+  "uniques" : 114,
   "views" : [
     {
-      "timestamp": "2024-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "timestamp": "2024-09-04T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
