@@ -1,10 +1,10 @@
 {
-  "count": 1,
+  "count": 2,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2024-07-24T00:00:00Z",
-      "count": 1,
+      "timestamp": "2024-09-04T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
